--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,41 @@
 
 html,
 body {
-    height: 100%;
+    /*height: 100%;*/
+    /*font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;*/
+    background: url('../img/bg.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    /*-moz-background-size: cover;*/
+    /*background-size: cover;*/
+    /*-o-background-size: cover;*/
+    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
-body {
-    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+
+.box {
+    margin-top: 20px;
+    /*margin-bottom: 20px;*/
+    padding: 30px 15px;
+    background: #fff;
+    background: rgba(255,255,255,0.9);
+    /*height: 100%;*/
+}
+
+.box-content {
+    width: 50%;
+    margin: auto;
+}
+
+.box-banner {
+    margin-top: -50px;
+    background: #ffffff !important;
+}
+
+.banner {
+    width: 75%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
 }
 
 .img-portfolio {
@@ -105,9 +135,6 @@ footer {
 }
 
 .banner {
-    display: block;
-    margin-left: auto;
-    margin-right: auto 
 }
 
 .nav-tabs {
